Added Facet to the advanced review screen to filter based on location attribute values.